tests/idris2/total/total012/expected
1/1: Building Issue1828 (Issue1828.idr)
LOG totality.requirement:10: Checking totality requirement of Issue1828.idr (main file is Issue1828.idr)
LOG totality.requirement:20: Reading totalReq from build/ttc/1/Issue1828.ttc
LOG totality.requirement:20: Got covering and expected total: we should rebuild
1/1: Building Issue1828 (Issue1828.idr)
Error: caseTest is not total, possibly not terminating due to call to Main.dummy

Issue1828:2:3--2:25
 1 | mutual
 2 |   caseTest : Nat -> Bool
       ^^^^^^^^^^^^^^^^^^^^^^

Error: dummy is not total, possibly not terminating due to recursive path Main.caseTest -> Main.dummy

Issue1828:6:3--6:14
 2 |   caseTest : Nat -> Bool
 3 |   caseTest p with (dummy)
 4 |    caseTest p | _ = True
 5 | 
 6 |   dummy : Nat
       ^^^^^^^^^^^

Error: caseTest is not total, possibly not terminating due to call to Main.dummy

Issue1828:2:3--2:25
 1 | mutual
 2 |   caseTest : Nat -> Bool
       ^^^^^^^^^^^^^^^^^^^^^^

Error: dummy is not total, possibly not terminating due to recursive path Main.caseTest -> Main.dummy

Issue1828:6:3--6:14
 2 |   caseTest : Nat -> Bool
 3 |   caseTest p with (dummy)
 4 |    caseTest p | _ = True
 5 | 
 6 |   dummy : Nat
       ^^^^^^^^^^^

1/1: Building Issue1828 (Issue1828.idr)
LOG totality.requirement:10: Checking totality requirement of Issue1828.idr (main file is Issue1828.idr)
LOG totality.requirement:20: Reading totalReq from build/ttc/1/Issue1828.ttc
LOG totality.requirement:20: Got covering and expected covering: we shouldn't rebuild
1/1: Building TotallyTotal (TotallyTotal.idr)
LOG totality.requirement:10: Checking totality requirement of TotallyTotal.idr (main file is TotallyTotal.idr)
LOG totality.requirement:20: Reading totalReq from build/ttc/1/TotallyTotal.ttc
LOG totality.requirement:20: Got total and expected covering: we shouldn't rebuild
LOG totality.requirement:10: Checking totality requirement of TotallyTotal.idr (main file is TotallyTotal.idr)
LOG totality.requirement:20: Reading totalReq from build/ttc/1/TotallyTotal.ttc
LOG totality.requirement:20: Got total and expected total: we shouldn't rebuild
